# TRAP

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  FUTURE_NETWORKED_DEMO.md  SPEC.md  TEST_SCENARIOS.md
trap-core/: Cargo.toml
trap-core/src/: lib.rs  outcome.rs
trap-core/src/beacon/: mod.rs
trap-core/src/crypto/: hash.rs  mod.rs  sign.rs  timelock.rs
trap-core/src/protocol/: client.rs  fields.rs  mod.rs  server.rs  verify.rs
trap-core/src/types/: contents.rs  messages.rs  mod.rs
trap-core/tests/: integration.rs
trap-demo/: Cargo.toml
trap-demo/src/: main.rs
