[workspace]
resolver = "2"
members = ["trap-core", "trap-demo"]

[workspace.dependencies]
timelock = { version = "0.3.0", default-features = false }
sha2 = { version = "0.10", default-features = false }
ed25519-dalek = { version = "2", features = ["rand_core"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
rand = "0.8"
hex = "0.4"
thiserror = "1"
ark-serialize = { version = "0.5", default-features = false }
